# ideep

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: mkl.cmake  mkldnn.cmake  profiling.cmake  settings.cmake  total_reduce.cmake
conda/: build.sh  conda_build_config.yaml  meta.yaml
dlcp/: Makefile  env_setup.sh
dlcp/include/: dl_compression.h
dlcp/src/: dl_compression.cpp  dl_compression_impl.cpp  dl_compression_impl.hpp  dl_compression_util.cpp  dl_compression_util.hpp
dlcp/test/: Makefile  main.cpp  run.sh
docker/python/: Dockerfile
docker/python2/: Dockerfile_centos  Dockerfile_ubuntu
docker/python3/: Dockerfile_centos  Dockerfile_ubuntu
example/: __init__.py  convolution_2d.py
example/functions/: __init__.py  convolution_2d.py  deconvolution_2d.py  linear.py  relu.py
ideep/: __init__.py  array.py  compute_complex.py  cpu_info.cc  dump_desc.h  mdarray.cc  mdarray.i  tensor.py  utils.cc  utils.hpp
ideep/api/: __init__.py  bn_backward.i  bn_forward.i  c_api.i  concat.i  convolution_backward_data.i  convolution_backward_weights.i  convolution_forward.i  cosim_dump.h  cosim_dump.i  dropout.h  dropout.i  eltwise_backward.i  eltwise_forward.i  inner_product_backward_data.i  inner_product_backward_weights.i  inner_product_forward.i  lrn_backward.i  lrn_forward.i  memory.i  mkldnn_ex.hpp  pooling_backward.i  pooling_forward.i  reorder.i  sum.i  support.i  view.i
ideep/chainer/: avg_pooling_2d.py  basic_math.py  bn.py  concat.py  convolution_2d.py  deconvolution_2d.py  dropout.py  fanout.py  linear.py  lrn.py  max_pooling_2d.py  optimization.py  pooling_2d.py  relu.py  reorder.py  runtime.py  sum.py
ideep/dlcp/: Makefile
ideep/dlcp/include/: dl_compression.h
ideep/dlcp/lib/: .gitignore
ideep/dlcp/src/: dl_compression.cpp  dl_compression_impl.cpp  dl_compression_impl.hpp  dl_compression_util.cpp  dl_compression_util.hpp
ideep/dlcp/test/: Makefile
ideep/include/: ideep.hpp
ideep/python/: __init__.py  compute_complex.py  cpu_info.h  mdarray.cc  mdarray.h
ideep/python/api/: __init__.py  api.i  concat.i  convolution_backward_weights.i  convolution_forward.i  cosim_dump.cc  inner_product_backward_data.i  lrn_forward.i  reorder.i  sum.i  view.i
ideep/python/swig_utils/: swigpyrun.h
ideep/python/utils/: conv.py
ideep/python/xnn/: avg_pooling_2d.py  basic_math.py  concat.py  dropout.py  linear.py  reorder.py
ideep/swig_utils/: __init__.py  asmap.i  asnumber.i  getattro.i  pep_3118.i  seq_typemap.i
ideep/testing/: __init__.py  array.py  helper.py
ideep/utils/: conv.py
ideep/xnn/: __init__.py  bn.py  convolution_2d.py  linear.py  relu.py
include/: TR_interface.h  computations.hpp  fast_math.hpp  ideep.hpp  ideep_pin_singletons.hpp  lru_cache.hpp  mkldnn_compat.hpp  tensor.hpp
include/ideep/: abstract_types.hpp  allocators.hpp  attributes.hpp  computations.hpp  cpu_info.hpp  distribute.hpp  fast_math.hpp  instruments.hpp  lru_cache.hpp  primitives.hpp  tensor.hpp  utils.hpp  web.hpp
include/ideep/operators/: batchnorm.hpp  binary.hpp  channel_shuffle.hpp  concat.hpp  conv.hpp  deconv.hpp  direct_copy.hpp  dropout.hpp  eltwise.hpp  gru.hpp  inner_product.hpp  layernorm.hpp  lbr_gru.hpp  lrn.hpp  lstm.hpp  matmul.hpp  pool.hpp  prelu.hpp  softmax.hpp  spliter.hpp  sum.hpp  vanilla_rnn.hpp
python/: binding.hpp  setup.cfg  setup.py
python/.pytest_cache/v/cache/: nodeids
python/ideep/blas/: sum.cc
python/ideep/common/: cpu_info.h
python/ideep/cosim/: __init__.py
python/ideep/include/blas/: blas.h
python/ideep/include/mkl/: mkl_types.h  mkl_vsl_types.h
python/ideep/include/mm/: tensor.h
python/ideep/include/primitives/: concat.h  dropout.h  eltwise.h  pooling.h
python/ideep/primitives/: eltwise.cc
python/ideep/primitives/ops/: lrn_bwd.cc  pooling_bwd.cc  pooling_fwd.cc  reorder_op.cc
python/ideep/py/dlcp/: dlcp_py.h
python/ideep/py/mm/: basic.cc  (+1 more)
python/ideep4py/: __init__.py
python/ideep4py/blas/: sum.cc
python/ideep4py/common/: common.cc  common.h  config.h  cpu_info.cc  cpu_info.h  logging.h  utils.cc  utils.h
python/ideep4py/cosim/: cosim.py
python/ideep4py/include/: utils.h
python/ideep4py/mm/: mem.cc  tensor.cc
python/ideep4py/primitives/: bn.cc  concat.cc  conv.cc  dropout.cc  linear.cc  lrn.cc  pooling.cc
python/ideep4py/py/: ideep4py.i
src/: dummy.c
tests/: CMakeLists.txt  bench_ideep_batch_normalization.cc  bench_ideep_concat.cc  bench_ideep_pooling_forward.cc  enable_vtune.patch  tensor_test.cc  test_convolution_2d.py  test_convolution_backward_data.cc  test_convolution_backward_weights.cc  test_convolution_forward.cc  test_deconvolution_2d.py  test_elementwise_2d.py  test_ideep_allocator.cc  test_ideep_async.cc  test_ideep_batch_normalization.cc  test_ideep_common.hpp  test_ideep_concat.cc  test_ideep_convolution_backward_data.cc  test_ideep_convolution_backward_weights.cc  test_ideep_convolution_forward.cc  test_ideep_inner_product_backward_data.cc  test_ideep_inner_product_backward_weights.cc  test_ideep_inner_product_forward.cc  test_ideep_lrn_backward.cc  test_ideep_lrn_forward.cc  test_ideep_pooling_backward.cc  test_ideep_pooling_forward.cc  test_ideep_relu.cc  test_ideep_reorder.cc  test_ideep_sum.cc  test_linear.py  test_lru_cache.cc  test_relu.py  test_tensor.cc
tests/ideep4py_tests/: test_convolution2d_py.py  test_dropout.py  test_pooling_2d_py.py
tests/ideep4py_tests/testing/: __init__.py
tests/in/: convolution_simple_small.h
total_reduce/: TR_interface.c  common.sh  compute_request.c  compute_request.h  knobs.h  makefile  pal.c  pal.h  payload.c  payload.h  pending_message.c  pending_message.h  ring.c  ring.h  run.sh  run_val.sh  time.c  time.h  total_reduce.c  total_reduce.h  total_reduce.md
total_reduce/dummy/: TR_dummy_interface.c
total_reduce/test/: inception_v3.h  reduce_avg.c  reduce_avg.cpp  reduce_int.c  resnet50.h  test_1payload_inplace.py  test_1payload_inplace_callback.py  test_1payload_noninplace.py  test_distribute.py  test_npayload_inplace.py  test_npayload_inplace_implicit_id.py  vgg16.h  workload.cpp
(+154 files in other folders)
